# SkyViewCameraV3

./: CMakeLists.txt
apps/processor/: main.cpp
libraries/capture/: capture.h
libraries/drawing/: drawing.h
libraries/processor/: processor.h
libraries/time/: time.h
