cmake_minimum_required(VERSION 3.14)
project(ImageProcessorApp CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenCV REQUIRED)
add_executable(processor apps/processor/main.cpp)
target_include_directories(processor PRIVATE libraries)
target_link_libraries(processor PRIVATE ${OpenCV_LIBS})